# beam_retriever

./: .env.example  .gitignore  README.md  llm_exp_long.py  pyproject.toml  run_train_2wiki.sh  run_train_reader.sh  run_train_retr_musique.sh  subsample.py  test_model_tmp.py
inference/: beam1_large.sh  beam2_large.sh
